Fix createdAt null bug, CORS for PATCH requests, Knowledge Base publish